# markdown-delight

./: .gitignore  BUILDING.md  CHANGELOG.md  CLA.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  index.html  package.json  popout.html  tv.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  theme_submission.yml
.github/workflows/: ci.yml  cla.yml
app/: Cargo.toml  about.hbs  about.toml  deny.toml
app/.cargo/: config.toml
app/src/: appearance.rs  comment_ui.rs  comments.rs  crt.rs  editor.rs  finder.rs  ipc.rs  main.rs  pane.rs  render.rs  session.rs  theme.rs  warp.rs
app/themes/: amber.toml  hacker.toml  ice.toml  paper.toml
docs/: PLAN.md
packaging/: markdown-delight.desktop
patches/: td-crt-pass.patch
scripts/: build-appimage.sh  install-hotkey.sh  make-default.sh  prepare-gpui.sh  release-smoke.sh  setup-deps.sh
src/js/: detach.js  main.js  markdown.js  panes.js  popout.js  theme-engine.js  workspace.js
src/styles/: theme.css  workspace.css
